# macchiato-dns

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-compile  Dockerfile-compile-arm  FONT-AWESOME-LICENSE  README.md  blugo.txt  config.toml.sample  flake.nix  macchiato.service  test_filter.txt
benches/: filter_vector_benchmark.rs
src/: :w  cache.rs  cli.rs  config.rs  dns.rs  dns_actors.rs  dns_message.rs  filter.rs  filter_actor.rs  filter_statistics.rs  helpers.rs  instrumentation.rs  lib.rs  main.rs  main_tokio.rs  message.rs  network.rs  overrides.rs  prometheus.rs  question.rs  remote_dns_actor.rs  resolver_manager.rs  resource_record.rs  responder.rs  response_actor.rs  ring_buffer.rs  tree.rs  web.rs  web_auth.rs
static/: index.html  styles.css
static/js/: app.js  network.js
