[package]
name = "dns"
version = "0.1.0"
authors = ["DrPandemic <DrPandemic@users.noreply.github.com>"]
edition = "2018"

[dependencies]
nix = "0.16.1"
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "json", "gzip"] }
structopt = "0.3"
lru = "0.6.3"
actix-web = { version = "4.3", features = ["rustls"] }
rustls = "0.21"
rustls_20 = { package = "rustls", version = "0.20" }
rustls-pemfile = "1"
actix-web-httpauth = "0.8"
actix-files = "0.6"
actix-rt = "2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
smartstring = "1.0.1"
rand = "0.7"
bcrypt = "0.14"
toml = "0.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "filter_vector_benchmark"
harness = false

[profile.release]
codegen-units=1
