[package]
name = "dns"
version = "0.1.0"
authors = ["DrPandemic <DrPandemic@users.noreply.github.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "gzip",
] }
actix-web = { version = "4", default-features = false, features = [
    "macros",
    "compress-gzip",
] }
actix-web-httpauth = "0.8"
actix-files = { version = "0.6", default-features = false }
rustls-pemfile = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = "0.5"
lru = "0.12"
# Same as actix-http
rand = "0.8"
structopt = { version = "0.3", default-features = false }
smartstring = "1.0.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "filter_vector_benchmark"
harness = false

[profile.release]
codegen-units = 1

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"
